Final Updates and file moves

--- a/Ignore-Drafts/ForceByCounty.ipynb
+++ b/Ignore-Drafts/ForceByCounty.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -109,14 +109,14 @@
        "4                             1,043             406              637  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Import csv file and create dataframe\n",
-    "file = '../resources/ca_law_enforcement_by_county.csv'\n",
+    "file = '../../etl-resources/ca_law_enforcement_by_county.csv'\n",
     "\n",
     "force_df = pd.read_csv(file)\n",
     "\n",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
        "4              637  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -337,7 +337,7 @@
        "34              510  6111  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
        "34      Ventura           1,242      732       510  6111"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -486,33 +486,36 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>county</th>\n",
        "      <th>total_employees</th>\n",
        "      <th>officers</th>\n",
        "      <th>civilians</th>\n",
        "      <th>fips</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>county</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Los Angeles</td>\n",
+       "      <th>Los Angeles</th>\n",
        "      <td>16582</td>\n",
        "      <td>9146</td>\n",
        "      <td>7436</td>\n",
        "      <td>6037</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Orange</td>\n",
+       "      <th>Orange</th>\n",
        "      <td>3602</td>\n",
        "      <td>1778</td>\n",
        "      <td>1824</td>\n",
        "      <td>6059</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>Ventura</td>\n",
+       "      <th>Ventura</th>\n",
        "      <td>1242</td>\n",
        "      <td>732</td>\n",
        "      <td>510</td>\n",
@@ -523,19 +526,21 @@
        "</div>"
       ],
       "text/plain": [
-       "         county  total_employees  officers  civilians  fips\n",
-       "8   Los Angeles            16582      9146       7436  6037\n",
-       "14       Orange             3602      1778       1824  6059\n",
-       "34      Ventura             1242       732        510  6111"
+       "             total_employees  officers  civilians  fips\n",
+       "county                                                 \n",
+       "Los Angeles            16582      9146       7436  6037\n",
+       "Orange                  3602      1778       1824  6059\n",
+       "Ventura                 1242       732        510  6111"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Set county as index\n",
+    "cleaned.set_index('county', inplace=True)\n",
     "\n",
     "cleaned.head()"
    ]
